--- a/importer/resources/jdbc.properties
+++ b/importer/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgis.DriverWrapper
-jdbc.url=jdbc\:postgresql_postGIS\://localhost\:5432/gofleetls
-jdbc.username=gofleetls
-jdbc.password=gofleetls
+jdbc.url=jdbc\:postgresql\://localhost\:5432/SpringDB
+jdbc.username=postgres
+jdbc.password=postgres
