Chages to make a CSV File Importer

--- a/importer/src/main/resources/jdbc.properties
+++ b/importer/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=org.postgis.DriverWrapper
+jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc\:postgresql\://localhost\:5432/SpringDB
 jdbc.username=postgres
 jdbc.password=postgres
