--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -13,11 +13,22 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
+		<!-- JUnit dependency for Spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.1.1.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>20030825.184428</version>
 		</dependency>
 
 		<dependency>
@@ -46,6 +57,11 @@
 			<version>${geotools.version}</version>
 		</dependency>
 		<!-- Driver postgre -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.postgis</groupId>
 			<artifactId>postgis-jdbc</artifactId>
