--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -36,6 +36,14 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2-beta1</version>
+		</dependency>
+
+
 		<!-- CSV File Reader -->
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
